# sentinel-openenv

./: .gitignore  CLAUDE.md  Dockerfile  PITCH.md  README.md  SENTINEL_LIVE.md  __init__.py  blog.md  client.py  drift.py  eval.py  graders.py  models.py  openenv.yaml  pyproject.toml  requirements-space.txt  requirements.txt  results_summary.md  results_table.md  scenarios.py
eval_data/: baseline_gpt_oss_20b.json  baseline_llama3_1_8b.json  baseline_naive.json  baseline_policy_aware.json  baseline_qwen2_5_72b.json  baseline_qwen2_5_7b.json  baseline_qwen3_1_7b_trained.json  baseline_qwen3_1_7b_zeroshot.json  baseline_random.json  baseline_trained_qwen3_1_7b_grpo.json  demo_action_screen_9007.json  demo_action_screen_9007.md  demo_drift_ops_9205.json  demo_drift_ops_9205.md  demo_war_room_42.json  demo_war_room_42.md  rft_dataset.jsonl  rft_summary.json
hub_assets/: README_sentinel_overseer_grpo400_model.md  README_sentinel_overseer_model.md
pitch/: README.md  slides.md  theme.css
scripts/: before_after_demo.py  deploy_hf.sh  generate_rft_dataset.py  hf_post_push_cleanup.py  launch_hf_job.ps1  launch_hf_job.sh  launch_trained_eval.ps1  launch_trained_eval.sh  launch_zeroshot_eval.ps1  launch_zeroshot_eval.sh  regen_grpo_notebook.py
server/: __init__.py  api_explorer_ui.py  app.py  environment.py  live_routes.py  live_ui.py
tools/: agent_demo.py  binary_sanity.py  build_results_table.py  diagnose_binary.py  find_before_after.py  regen_baseline_plot.py  sft_stats.py
training/: eval_trained.py  grpo_colab.ipynb  grpo_hf_job.py  grpo_local_rtx3070ti.ipynb  grpo_smoke.py  plot_utils.py  run_summary.json  sft_warmup.py
